# kohonen-iris

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  isai-kohonen-iris-clusterization.sublime-project
src/: dataset.cpp  dataset.h  kohnet.cpp  kohnet.h  kohris.cpp  kohris.h  prng.cpp  prng.h  test.cpp
